# auto-corr-feature-selection

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
auto_corr_feature_selection/: auto_corr_feature_selection.py
examples/: iris.py
tests/: test_auto_corr_feature_selection.py
