[tool.poetry]
name = "auto-corr-feature-selection"
version = "0.1.0"
description = "Automatically select the most relevant features based on correlation."
authors = ["Andres Di Giovanni <andresdigiovanni@gmail.com>"]
readme = "README.md"
packages = [{include = "auto-corr-feature-selection"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
